--- a/less/demo.less
+++ b/less/demo.less
@@ -1,33 +1,27 @@
 @import 'http://fonts.googleapis.com/css?family=Exo:200,700%7COpen+Sans:400,400italic';
 
 
-html, body { padding:0; margin:0; height: 100%; }
+html, body { padding:0; margin:0; min-height: 100%; }
+
 
 body {
+	background: linear-gradient(315deg, rgba(0, 170, 255, 0.1), rgba(220, 110, 10, 0.2) 99%), url(../images/shattered.png);
+	background-attachment: fixed;
 	line-height: 1.5;
 	font-family: Open Sans, sans-serif;
 	color: #405060;
 	font-size: 10pt;
-
-
-
-	background: linear-gradient(315deg, rgba(0, 170, 255, 0.1), rgba(220, 110, 10, 0.2) 80%), /* linear-gradient(top left, rgba(255, 255, 255, 0.1), rgba(220, 255, 255, 0.2)), */ url(../images/shattered.png);
-	background-attachment: fixed fixed;
-
-	// background: linear-gradient(90deg, rgba(200, 0, 0, 0.2), rgba(200, 0, 0, 0.2)), url(../images/shattered.png)
-	// rgba(200, 80, 200, 0.1)
+	padding: 20px 0 50px 0;
+	border-bottom: 50px solid transparent;
 }
 
 
-
-.col,
-.cols {
-	background: white;
-	box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.1), -1px 1px 0 rgba(0, 0, 0, 0.1), 0 0 0 4px rgba(0, 0, 0, 0.0), 0 2px 0 rgba(0, 0, 0, 0.1);
+.content {
+	background: rgba(255,255,255,.9);
+	box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.25), -1px 1px 0 rgba(0, 0, 0, 0.1), 0 0 0 4px rgba(0, 0, 0, 0.0), 0 2px 0 rgba(0, 0, 0, 0.1);
 	border-radius: 2px;
-	padding-top: 40px;
-	padding-bottom: 80px;
 	margin-bottom: 4px;
 	opacity: 0.9;
 	min-height: 180px;
+	padding: 10px;
 }
