--- a/jade/demo.jade
+++ b/jade/demo.jade
@@ -8,45 +8,76 @@ html(lang="en")
     link(rel="stylesheet", href="css/demo.css")
   body
     .row
-      .span_all.columns
+      .all.columns
         .content
     .row
-      .span_half.columns
+      .half.columns
         .content
-      .span_half.columns
-        .content
-    .row
-      .span_one_third.columns
-        .content
-      .span_one_third.columns
-        .content
-      .span_one_third.columns
+      .half.columns
         .content
     .row
-      .span_one_third.columns
+      .one-third.columns
         .content
-      .span_two_thirds.columns
+      .one-third.columns
+        .content
+      .one-third.columns
         .content
     .row
-      .span_1.column
+      .two-thirds.columns
         .content
-      .span_1.column
+      .one-third.columns
         .content
-      .span_1.column
+    .row
+      .half.columns
+        .content.no-id
+          .row
+            .half.columns
+              .content  Nested
+            .half.columns
+              .content  Nested
+          .row
+            .all.columns
+              .content  Nested
+      .half.columns
         .content
-      .span_1.column
+    .row
+      .span1.columns
         .content
-      .span_1.column
+      .span1.columns
         .content
-      .span_1.column
+      .span1.columns
         .content
-      .span_1.column
+      .span1.columns
         .content
-      .span_1.column
+      .span1.columns
         .content
-      .span_2.column
+      .span1.columns
         .content
-      .span_1.column
+      .span1.columns
         .content
-      .span_1.column
+      .span1.columns
         .content
+      .span1.columns
+        .content
+      .span1.columns
+        .content
+      .span1.columns
+        .content
+      .span1.columns
+        .content
+      .span1.columns
+        .content
+      .span1.columns
+        .content
+      .span1.columns
+        .content
+      .span1.columns
+        .content
+    .row
+      .span8.columns.push8
+        .content  reverse
+      .span8.columns.pull8
+        .content  reverse
+    .row
+      .span12.columns.push4
+        .content  pushed 4
