--- a/less/grid/grid.less
+++ b/less/grid/grid.less
@@ -1,9 +1,16 @@
 //-* --- Grid vars ---*-// 
-@page_width: 1200px;
-@max_columns: 12;
-@padding: 0px;
-@gutter: 4px;
+@page_width: 960px;
+@max_columns: 16;
+@padding: 0px 10px;
+@gutter: 0%;
 
+
+
+@omitColumns: false;
+
+@column_prefix: span;
+@push_prefix: push;
+@pull_prefix: pull;
  
 @import 'core/mixins';
 @import 'core/layouts';
